# Customer-Segmentation-and-Purchase-prediction-using-clustering-and-decision-trees

./: main.py  pyproject.toml
notebooks/: creating_new_features.ipynb  customer_purchase_prediction.ipynb  customer_purchase_prediction_corrected.ipynb  merging_and_testing.ipynb  new_dataset.ipynb  preprocessing.ipynb
